<resources>
    <string name="app_name">Saloon</string>
    <string name="username">Username</string>
    <string name="saloon_app">Saloon App</string>
    <string name="password">Password</string>
    <string name="register_new_account">Register new account</string>
    <string name="login">Login</string>
    <string name="saloon_name">Saloon Name</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="login_instead">Login Instead</string>
    <string name="saloon_address">Saloon Address</string>
    <string name="address_line_1">Address</string>
    <string name="town_city">Town/City:</string>
    <string name="no_styles">No Styles</string>
    <string name="add_item">Add Item</string>
    <string name="store_front">Store Front</string>
    <string name="style_name">style name</string>
    <string name="time">Time</string>
    <string name="style_image">style image</string>
    <string name="distance">%1$s, %2$s, %3$s</string>
    <string name="time_distance">%1$s-%2$s</string>
    <string name="price">Price</string>
    <string name="duration_mins">Duration (mins)</string>
    <string name="Style_name">Style Name</string>
    <string name="update_style">Update Style</string>
    <string name="cost">Cost</string>
    <string name="max_time_optional">Max time (optional)</string>
    <string name="add_image"><u>Add Image</u></string>
    <string name="create_style">Create Style</string>
    <string name="create_category">Create Category</string>
    <string name="info">Info</string>
    <string name="choose_date">Choose Date:</string>
    <string name="mm">MM</string>
    <string name="dd">DD</string>
    <string name="yyyy">YYYY</string>
    <string name="tags_popular_words">Tags (Popular Words)</string>
    <string name="my_account">My Account</string>
    <string name="mobile_number_colon">Mobile Number:</string>
    <string name="email_colon">Email:</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="address_colon">Address</string>
    <string name="change_images">Change Images</string>
    <string name="change_password">Change Password:</string>
    <string name="saloon_name_colon">Saloon Name:</string>
    <string name="opens">Opens:</string>
    <string name="open_">Opens: %1$s</string>
    <string name="expiry_format">%1$s/</string>
    <string name="close_">Closes: %1$s</string>
    <string name="url">http://192.168.1.66:81/saloon/%1$s</string>
    <string name="closes">Closes:</string>
    <string name="save_address">Save Address</string>
    <string name="postcode">Postcode</string>
    <string name="country">Country:</string>
    <string name="address_ph">%1$s ~ %2$s</string>
    <string name="money">£%1$.2f</string>
    <string name="saloon_number">Saloon Number</string>
    <string name="clock">%1$02d:%2$02d</string>
    <string name="saloon_password">Saloon Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save_name">Save Name</string>
    <string name="time_mins">%1$s mins</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_time">Choose Time:</string>
    <string name="_00_00">00:00</string>
    <string name="datetime">%1$04d-%2$02d-%3$02d</string>
    <string name="book_now">Book Now</string>
    <string name="reviews_0">Reviews(0)</string>
    <string name="reviews">Reviews(%1$s)</string>
    <string name="more_like_this">More Like This</string>
    <string name="edit_style">Edit style</string>
    <string name="user_view">User View</string>
    <string name="_01_00">01:00</string>
    <string name="_02_00">02:00</string>
    <string name="_03_00">03:00</string>
    <string name="_04_00">04:00</string>
    <string name="_05_00">05:00</string>
    <string name="_06_00">06:00</string>
    <string name="_07_00">07:00</string>
    <string name="_08_00">08:00</string>
    <string name="_09_00">09:00</string>
    <string name="_10_00">10:00</string>
    <string name="_11_00">11:00</string>
    <string name="_12_00">12:00</string>
    <string name="_13_00">13:00</string>
    <string name="_14_00">14:00</string>
    <string name="_15_00">15:00</string>
    <string name="_16_00">16:00</string>
    <string name="_18_00">18:00</string>
    <string name="_17_00">17:00</string>
    <string name="_19_00">19:00</string>
    <string name="_20_00">20:00</string>
    <string name="_21_00">21:00</string>
    <string name="_22_00">22:00</string>
    <string name="_23_00">23:00</string>
    <string name="date_format">dd-M-yyyy hh:mm:ss</string>
    <string name="add_break">Add Break</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="month">Month</string>
    <string name="make_datetime">%1$s %2$s</string>
    <string name="book_show">%1$s: %2$s</string>
    <string name="next_day">Next day</string>
    <string name="previous_day">Previous day</string>
    <string name="break_word">Break</string>
    <string name="booking">Booking</string>
    <string name="delete">Delete</string>
    <string name="edit_time">Edit Time</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="events_already_exists">Events already exists</string>
    <string name="edit_break">Edit Break</string>
    <string name="delete_event">Delete Event</string>
    <string name="back">Back</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="obj_colon">%1$s: %2$s</string>
    <string name="reason">Reason:</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <string name="save_password">Save Password</string>
    <string name="save_style">Save Style</string>
    <string name="already_booked">Already Booked</string>
    <string name="categories">Categories</string>
    <string name="add_category">Add Category</string>
    <string name="checked">Checked</string>
    <string name="add_styles">Add Styles</string>
    <string name="category_name">Category Name</string>
    <string name="duration">Duration</string>
    <string name="_0_mins">0 mins</string>
    <string name="select_time">Select Time</string>
    <string name="close">Close</string>
    <string name="_0">0</string>
    <string name="mins">mins</string>
    <string name="no_styles_found">No Styles Found</string>
    <string name="delete_check">Are You Sure You Want To Delete %1$s</string>
    <string name="user_date">%1$02d/%2$02d/%3$04d</string>
    <string name="save_number">Save Number</string>
    <string name="no_upcoming_bookings">No Upcoming Bookings</string>
    <string name="code">code</string>
    <string name="booking_id">Booking Id: %1$s</string>
    <string name="search">search</string>
    <string name="filter">Filter</string>
    <string name="favourites">Favourites</string>
    <string name="rating">Rating</string>
    <string name="separate">%1$s - %2$s</string>
    <string name="duration_time">Duration: %1$s mins</string>
    <string name="rate">Rating: %1$s</string>
    <string name="comma">%1$s, %2$s</string>
    <string name="all">All</string>
    <string name="men">Men</string>
    <string name="gender">Gender</string>
    <string name="length">Length</string>
    <string name="long_">Long</string>
    <string name="short_">Short</string>
    <string name="medium">Medium</string>
    <string name="women">Women</string>
    <string name="icon">Icon</string>
    <string name="notification">Notification</string>
    <string name="_1">1</string>
    <string name="go_to_style">Go To Style</string>
    <string name="details">Details</string>
    <string name="town">Town</string>
    <string name="city">City</string>
    <string name="add_image_">Add Image</string>
    <string name="remove_image">Remove Image</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="facebook_icon">Facebook Icon</string>
    <string name="google_icon">Google Icon</string>
    <string name="england">England</string>
    <string name="saloon_location">Saloon Location</string>
    <string name="priv">Private</string>
    <string name="pub">Public</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="payment_method">Payment Method</string>
    <string name="cvv">CVV</string>
    <string name="expiry">Expiry</string>
    <string name="card_number">Card Number</string>
    <string name="edit_category">Edit Category</string>
</resources>