<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="bottom"
    android:background="@drawable/curved"
    android:padding="18dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">
    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/style_name"
        android:gravity="center_horizontal"
        android:textSize="35sp"
        android:layout_marginBottom="5dp"/>
    <TextView
        android:id="@+id/tvCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/code"
        android:textSize="35sp"/>
    <TextView
        android:id="@+id/tvTimes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="25sp"/>
    <TextView
        android:id="@+id/tvCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cost"
        android:textSize="25sp"/>
    <ImageView
        android:contentDescription="@string/code"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/ic_baseline_qr_code_24"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGoToStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/teal_200"
        android:text="@string/go_to_style"
        android:textColor="@android:color/white" />
</LinearLayout>