<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".StyleFragment"
    android:background="@drawable/border"
    android:orientation="vertical"
    android:paddingTop="5dp">
    <TextView
        android:id="@+id/tvName"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/style_name"
        android:textSize="25sp"/>
    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_person_24"
            android:contentDescription="@string/style_image"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                android:text="@string/email"/>
            <TextView
                android:id="@+id/tvCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                android:text="@string/cost"/>
            <TextView
                android:id="@+id/tvTimePeriod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                android:text="@string/time"/>
            <TextView
                android:id="@+id/tvStyleDuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                android:text="@string/duration_mins"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>