<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/ivStoreFront"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        app:iss_auto_cycle="true"
        app:iss_corner_radius="5"
        app:iss_delay="0"
        app:iss_error_image="@android:color/darker_gray"
        app:iss_period="2000"
        app:iss_placeholder="@android:color/darker_gray"
        app:iss_selected_dot="@drawable/default_selected_dot"
        app:iss_unselected_dot="@drawable/default_unselected_dot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDetails"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/border"
        android:paddingBottom="13dp"
        android:paddingTop="13dp"
        app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/details"/>
    <TextView
        android:id="@+id/tvAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/border"
        android:paddingBottom="13dp"
        android:paddingTop="13dp"
        app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/address_colon"/>
    <TextView
        android:id="@+id/tvPayment"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/border"
        android:paddingBottom="13dp"
        android:paddingTop="13dp"
        app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/payment_method"/>
    <TextView
        android:id="@+id/tvOpen"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/border"
        android:paddingBottom="13dp"
        android:paddingTop="13dp"
        app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/opens"/>
    <TextView
        android:id="@+id/tvClose"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/border"
        android:paddingBottom="13dp"
        android:paddingTop="13dp"
        app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/closes"/>
    <TextView
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/border"
        android:paddingBottom="13dp"
        android:paddingTop="13dp"
        app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
        android:id="@+id/tvChangeImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/change_images" />
    <TextView
        android:id="@+id/tvPassword"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/border"
        android:paddingBottom="13dp"
        android:paddingTop="13dp"
        app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/change_password"/>
</LinearLayout>